build: more space on arm64 builds, running out of ideas here

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -345,22 +345,42 @@ step-get-more-space-on-mac: &step-get-more-space-on-mac
           fi
         }
         tmpify /Library/Developer/CoreSimulator
+        tmpify ~/Library/Developer/CoreSimulator
         tmpify $(xcode-select -p)/Platforms/AppleTVOS.platform
         tmpify $(xcode-select -p)/Platforms/iPhoneOS.platform
         tmpify $(xcode-select -p)/Platforms/WatchOS.platform
         tmpify $(xcode-select -p)/Platforms/WatchSimulator.platform
         tmpify $(xcode-select -p)/Platforms/AppleTVSimulator.platform
         tmpify $(xcode-select -p)/Platforms/iPhoneSimulator.platform
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/metal/ios
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift
+        tmpify $(xcode-select -p)/Toolchains/XcodeDefault.xctoolchain/usr/lib/swift-5.0
         tmpify ~/.rubies
         tmpify ~/Library/Caches/Homebrew
         tmpify /usr/local/Homebrew
-        if [ "$TARGET_ARCH" == "arm64" ]; then
-          tmpify "/System/Library/Desktop Pictures"
-          tmpify /System/Library/Templates/Data
-          tmpify /System/Library/Speech/Voices
-          tmpify "/System/Library/Screen Savers"
-        fi
         sudo rm -rf $TMPDIR/del-target
+
+        if [ "$TARGET_ARCH" == "arm64" ]; then
+          sudo rm -rf "/System/Library/Desktop Pictures"
+          sudo rm -rf /System/Library/Templates/Data
+          sudo rm -rf /System/Library/Speech/Voices
+          sudo rm -rf "/System/Library/Screen Savers"
+
+          # lipo off some huge binaries arm64 versions to save space
+          cd $(xcode-select -p)/../SharedFrameworks
+          f=$(find . -perm +111 -type f)
+          for fp in $f
+          do
+            if [[ $(file "$fp") == *"universal binary"* ]]; then
+              if [[ $(file "$fp") == *"arm64e)"* ]]; then
+                lipo -remove arm64e "$fp" -o "$fp"
+              fi
+              if [[ $(file "$fp") == *"arm64)"* ]]; then
+                lipo -remove arm64 "$fp" -o "$fp"
+              fi
+            fi
+          done
+        fi
       fi
     background: true
 
@@ -460,6 +480,11 @@ step-electron-build: &step-electron-build
         rm -f src/out/Default/libffmpeg.so
       fi
       cd src
+      if  [ "$TARGET_ARCH" == "arm64" ] &&[ "`uname`" == "Darwin" ]; then
+        diskutil erasevolume HFS+ "xcode_disk" `hdiutil attach -nomount ram://12582912`
+        mv /Applications/Xcode-12.beta.4.app /Volumes/xcode_disk/
+        ln -s /Volumes/xcode_disk/Xcode-12.beta.4.app /Applications/Xcode-12.beta.4.app
+      fi
       ninja -C out/Default electron -j $NUMBER_OF_NINJA_PROCESSES
       node electron/script/check-symlinks.js
 
